# template-monorepo

./: .editorconfig  .envrc  .gitignore  .hygen.js  .release.json  .shellcheckrc  buf.work.yaml  config.json  helm.sh  package-lock.json  package.json  pyproject.toml  shell.nix  skaffold.yaml  tasks.py  tools.go  turbo.json
.ahk/: tools.ahk
.ahk/lib/: array.ahk  chrome.ahk  delay.ahk  hotkeys.ahk  jxon.ahk  logger.ahk  shell.ahk  util.ahk  websocket.ahk
.ahk/util/: chrome.ahk  overrides.ahk
.config/: config.development.json  config.json  config.staging.json
.github/.linters/: .jscpd.json  .prettierignore  asdf
.github/linters/: .prettierrc.yaml
.husky/: commit-msg  pre-commit  prepare-commit-msg
.linters/: .prettierrc.yaml
.nix/: default.nix  sources.json
.proto/account/: buf.yaml  package.json
.proto/api/: buf.yaml  package.json
.proto/contact/: buf.yaml  package.json
.proto/db/: buf.yaml  package.json
.scripts/: constants.mjs  index.mjs
.scripts/commands/: _app.mjs  _clean.mjs  _code.mjs  _dev.mjs  _generate.mjs  _init.mjs  _lint.mjs  _refresh.mjs  _service.mjs  _tools.mjs  _update.mjs  index.mjs
.scripts/utils/: _fingerprint.mjs  _json-2-env.mjs  index.mjs
.skaffold/: skaffold.apps.yaml  skaffold.functions.yaml  skaffold.services.yaml
.templates/common/: _components.json  index.js
.templates/utils/: _names.js  _replace.js  index.js
.tmp/fingerprint/: .config.sha256  .linters.sha256  package.json.sha256  tools.go.sha256
.tools/: eden  i  nixpkgs-fmt  trunk
.trunk/: trunk.yaml
scripts/: config.py  fingerprint.py  linters.py
(+586 files in other folders)
